# data_collection

./: .gitignore  Sm_franka_teleop.py  collect_data_with_teleop2.py  data_collection_frankapy_continous.py  data_collection_utils.py  debug.py  debug_teleop_bp.py  dynamic_pose_control.py  filter_data.py  franka_traj_my.pkl  frankapy_spacemouce_collection.py  pyproject.toml  real_camera_utils_new.py  record_trajectory.py  replay.py  reset_arm.py  resnet.py  run_recorded_trajectory.py  run_recorded_trajectory_my.py  teleop_collector.py  teleoperation.py  test_camera.py  train_resnet2actions.py
input_device/: spacemouse.py
shared_memory/: nested_dict_util.py  shared_memory_queue.py  shared_memory_ring_buffer.py  shared_memory_util.py  shared_ndarray.py
