[project]
name = "data-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "atomics>=1.0.3",
    "keyboard",
    "pynput>=1.8.1",
    "pyrealsense2>=2.56.5.9235",
    "pyspacemouse>=1.1.4",
    "pyzed>=1.3.0",
]
